--- a/log4j-bom/pom.xml
+++ b/log4j-bom/pom.xml
@@ -26,13 +26,13 @@
   <description>Apache Log4j Bill of Materials</description>
   <groupId>org.apache.logging.log4j</groupId>
   <artifactId>log4j-bom</artifactId>
-  <version>2.20.0</version>
+  <version>2.20.1-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <properties>
     <maven.site.skip>true</maven.site.skip>
     <maven.site.deploy.skip>true</maven.site.deploy.skip>
-    <project.build.outputTimestamp>1676683261</project.build.outputTimestamp>
+    <project.build.outputTimestamp>1676683596</project.build.outputTimestamp>
   </properties>
 
   <dependencyManagement>
@@ -239,8 +239,4 @@
       </plugin>
     </plugins>
   </build>
-
-  <scm>
-    <tag>log4j-2.20.1-rc1</tag>
-  </scm>
 </project>
