--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,8 +47,6 @@ jobs:
         with:
           distribution: temurin
           java-version: 11
-          java-package: jdk
-          architecture: x64
           cache: maven
 
       # We could have used `verify`, but `clean install` is required for the following:
@@ -56,12 +54,11 @@ jobs:
       #    For details, see: https://maven.apache.org/guides/mini/guide-reproducible-builds.html#how-to-test-my-maven-build-reproducibility
       # 2. `javadoc:javadoc-no-fork`, which is attached to the `site` goal
       - name: Build
-        timeout-minutes: 10
+        timeout-minutes: 60
         shell: bash
         run: |
           ./mvnw \
             --show-version --batch-mode --errors --no-transfer-progress \
-            -DskipTests=true \
             clean install
 
       # `clean verify artifact:compare` is required to generate the build reproducibility report.
@@ -74,40 +71,19 @@ jobs:
           ./mvnw \
             --show-version --batch-mode --errors --no-transfer-progress \
             -DskipTests=true \
-            clean verify artifact:compare || failed=1
-          for report_file in target/*.buildcompare **/target/*.buildcompare; do
-            if ! grep -q "^ko=0$" "$report_file"; then
-              echo "Spotted build reproducibility failure in \`$report_file\`:"
-              cat "$report_file"
-              failed=1
-            fi
-          done
-          if [ -n "$failed" ]; then
-            exit $failed
-          fi
+            clean package artifact:compare
 
       - name: Upload reproducibility failure context artifacts
-        if: failure() && steps.report-reproducible.outcome == 'failure'
-        uses: actions/upload-artifact@0b7f8abb1508181956e8e162db84b466c27e18ce
+        if: failure()
+        uses: actions/upload-artifact@0b7f8abb1508181956e8e162db84b466c27e18ce   # 3.1.2
         with:
-          name: reproducubility-failure-context-${{matrix.os}}
+          name: reproducibility-failure-context-${{matrix.os}}
           path: |
             **/target/*.buildcompare
             **/target/*.jar
             **/target/reference/*.jar
 
-      - name: Maven "verify"
-        timeout-minutes: 60
-        shell: bash
-        run: |
-          ./mvnw \
-            --show-version --batch-mode --errors --no-transfer-progress \
-            -DtrimStackTrace=false \
-            -Dsurefire.rerunFailingTestsCount=2 \
-            -Dlog4j2.junit.fileCleanerSleepPeriodMillis=1000 \
-            verify
-
-      - name: Maven "site"
+      - name: Build site
         timeout-minutes: 10
         shell: bash
         run: |
@@ -151,12 +127,7 @@ jobs:
         with:
           distribution: temurin
           java-version: 11
-          java-package: jdk
-          architecture: x64
           cache: maven
-
-      - name: Inspect environment
-        run: env | grep '^JAVA'
 
       - name: Inspect project version
         run: |
